# urdf-bridge-builder

./: README.md  pyproject.toml  spec.md
.github/workflows/: python-publish.yml
gz-bridge-builder/src/: __init__.py  app.py  core.py
gz-bridge-builder/src/tests/: test_generator.py
src/urdf_bridge_builder/: app.py  core.py
src/urdf_bridge_builder/tests/: test_generator.py
